z-index dropdown bug fixed

--- a/front/src/style/style.css
+++ b/front/src/style/style.css
@@ -96,6 +96,7 @@ strong {
   background-color: #f9f9f9;
   min-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 /* Links inside the dropdown */
